<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <Button
            android:id="@+id/button_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choix_button"
            />

        <TextView
            android:id="@+id/mafag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name" />

        <TextView
            android:id="@+id/mafag_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_link" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_button"
            android:onClick="openOnNavigator"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>