<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MafagActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButtonGoogle"
            android:layout_width="89dp"
            android:layout_height="89dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/chercher"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="16dp"
            android:onClick="onClickGoogle"/>

        <ImageButton
            android:id="@+id/imageButtonApple"
            android:layout_width="89dp"
            android:layout_height="87dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/apple"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="105dp"
            android:onClick="onClickApple"/>

        <ImageButton
            android:id="@+id/imageButtonFacebook"
            android:layout_width="89dp"
            android:layout_height="86dp"
            android:contentDescription="@string/facebook"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/facebook"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="192dp"
            android:onClick="onClickFacebook"/>

        <ImageButton
            android:id="@+id/imageButtonAmazon"
            android:layout_width="90dp"
            android:layout_height="92dp"
            android:contentDescription="@string/amazon"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/social"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="278dp"
            android:onClick="onClickAmazon"/>

        <ImageButton
            android:id="@+id/imageButtonMicrosoft"
            android:layout_width="90dp"
            android:layout_height="94dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/microsoft"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="370dp"
            android:onClick="onClickMicrosoft"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>